# my-analytics

./: .env.example  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: deploy.yml
migrations/: 001_users.sql
src/: auth.rs  config.rs  db.rs  error.rs  main.rs  setup.rs  templates.rs
src/routes/: auth.rs  dashboard.rs
templates/: dashboard.html  login.html
