[package]
name = "my-analytics"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
argon2 = "0.5.3"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["cookie-private"] }
chrono = "0.4.44"
dotenvy = "0.15.7"
minijinja = "2.18.0"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros", "migrate", "chrono", "uuid"] }
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }
